--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build": "run-s build:*",
+    "build:styles": "npx tailwindcss -i ./styles/tailwind.css -o ./app/styles/tailwind.css",
+    "build:remix": "remix build",
     "dev": "remix build && run-p \"dev:*\"",
+    "dev:styles": "npm run build:styles -- --watch",
     "dev:node": "cross-env NODE_ENV=development nodemon ./server.js --watch ./server.js",
     "dev:remix": "remix watch",
     "start": "cross-env NODE_ENV=production node ./server.js"
@@ -27,6 +30,7 @@
     "eslint": "^8.15.0",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   },
   "engines": {
